--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sqlite3": "^5.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^5.1.3",
-    "typeorm": "^0.3.17",
+    "typeorm": "0.3.10",
     "reflect-metadata": "^0.1.13"
   }
 }
